--- a/dsiplib/pyproject.toml
+++ b/dsiplib/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
